<resources>
    <string name="app_name">Realm</string>
    <string name="base_url">https://newsapi.org/v1/</string>
    <string name="news_label">News</string>
    <string name="notes_label">Notes</string>
    <string name="profile_label">Profile</string>
    <string name="titleHint">Title:</string>
    <string name="descriptionHint">Description:</string>
    <string name="addPhoto">Add Photo</string>
    <string name="btnOk">OK</string>
    <string name="btnCancel">CANCEL</string>
    <string name="btnAdd">Add</string>
    <string name="titleField">Title field is not be empty!</string>
</resources>
